--- a/Hmwk/Indexed Sort Array/.project
+++ b/Hmwk/Indexed Sort Array/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Assignment 4</name>
+	<name>Indexed Sort Array</name>
 	<comment></comment>
 	<projects>
 	</projects>
